--- a/debian/rules
+++ b/debian/rules
@@ -33,7 +33,8 @@ binary-arch: build
 	cat debian/copyright.in | sed -e "s&#OSNAME#&$(OSNAME)&g" \
 		> $(docdir)/copyright
 	chmod 644 $(docdir)/copyright
-	sh debian/check-etc-profile-md5sum
+	sh debian/check-md5sum-etc profile
+	sh debian/check-md5sum-etc nsswitch.conf
 	sed -e "s/#VENDORFILE#/$(VENDORFILE)/g" debian/postinst.in \
 		> debian/tmp/DEBIAN/postinst
 	chmod 755 debian/tmp/DEBIAN/postinst
@@ -61,6 +62,8 @@ endif
 		> debian/tmp/etc/issue.net
 	sed -e "s&#OSNAME#&$(OSNAME)&g" etc/os-release \
 		> debian/tmp/etc/os-release
+	mv debian/tmp/etc/os-release debian/tmp/usr/lib
+	ln -s ../usr/lib/os-release debian/tmp/etc/os-release
 	gzip -9 $(docdir)/changelog
 	cd debian/tmp && \
 		md5sum `find usr -type f` > DEBIAN/md5sums
@@ -71,10 +74,14 @@ endif
 	cd debian/tmp && chmod 2775 `cat ../2775-dirs`
 	cd debian/tmp && chmod 700 root
 	dpkg-gencontrol -pbase-files
-	dpkg --build debian/tmp ..
+	dpkg-deb --build -Zgzip debian/tmp ..
 
 binary-indep: build
 
 binary: binary-indep binary-arch
+
+build-arch: build
+
+build-indep: build
 
 .PHONY: binary binary-arch binary-indep clean
