Fix ev3dev urls.

--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: required
 Maintainer: David Lechner <david@lechnology.com>
 XSBC-Original-Maintainer: Santiago Vila <sanvila@debian.org>
 Standards-Version: 3.9.5
-Vcs-Browser: http://github.com/ev3dev-dpkg/base-files
-Vcs-Git: git://github.com/ev3dev-dpkg/base-files
+Vcs-Browser: http://github.com/ev3dev/base-files
+Vcs-Git: git://github.com/ev3dev/base-files
 
 Package: base-files
 Provides: base
