--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,5 @@
 [DEFAULT]
-debian-branch=ev3dev-jessie
-debian-tag=ev3dev-jessie/%(version)s
+debian-branch=ev3dev-testing
+debian-tag=ev3dev-testing/%(version)s
+upstream-branch=testing
+upstream-tag=testing/%(version)s
